2D_bidomain/jitfailure-dolfin_expression_e23c4c2f383c70a6f94ace52f637a0b7/error.log
/tmp/tmpn3ly11mh/dolfin_expression_e23c4c2f383c70a6f94ace52f637a0b7.cpp: In member function 'virtual void dolfin::dolfin_expression_e23c4c2f383c70a6f94ace52f637a0b7::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const':
/tmp/tmpn3ly11mh/dolfin_expression_e23c4c2f383c70a6f94ace52f637a0b7.cpp:61:35: error: expected ',' before '[' token
   61 |           values[0] = as_vector([x[1] / sqrt(dot(x, x)), -x[0] / sqrt(dot(x, x))]);
      |                                   ^
/tmp/tmpn3ly11mh/dolfin_expression_e23c4c2f383c70a6f94ace52f637a0b7.cpp:61:35: error: expected identifier before '[' token
/tmp/tmpn3ly11mh/dolfin_expression_e23c4c2f383c70a6f94ace52f637a0b7.cpp:61:56: error: expected ']' before ',' token
   61 |           values[0] = as_vector([x[1] / sqrt(dot(x, x)), -x[0] / sqrt(dot(x, x))]);
      |                                                        ^
/tmp/tmpn3ly11mh/dolfin_expression_e23c4c2f383c70a6f94ace52f637a0b7.cpp: In lambda function:
/tmp/tmpn3ly11mh/dolfin_expression_e23c4c2f383c70a6f94ace52f637a0b7.cpp:61:56: error: expected '{' before ',' token
/tmp/tmpn3ly11mh/dolfin_expression_e23c4c2f383c70a6f94ace52f637a0b7.cpp: In member function 'virtual void dolfin::dolfin_expression_e23c4c2f383c70a6f94ace52f637a0b7::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const':
/tmp/tmpn3ly11mh/dolfin_expression_e23c4c2f383c70a6f94ace52f637a0b7.cpp:61:71: error: 'dot' was not declared in this scope
   61 |           values[0] = as_vector([x[1] / sqrt(dot(x, x)), -x[0] / sqrt(dot(x, x))]);
      |                                                                       ^~~
